--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">咸鱼锄大地</string>
+    <string name="btnName_startGame">开始游戏</string>
+    <string name="btnName_setting">游戏设置</string>
+    <string name="btnName_exit">退出游戏</string>
 </resources>
